Bumps protobuf-java from 3.1.0 to 3.17.2
Bumps protobuf-java from 3.1.0 to 3.17.2